      Thanks Thomas Ward.
    + Added back missing module gunzip. (Closes: #782065)
      Thanks Peter Wu for the initial patch.
  * debian/modules/nginx-lua/*:
    + Updated module version. (Closes: #762494)
  * debian/ngx-conf/*
    + Added configuration utility. (Closes: #652108)
  * debian/nginx-common.manpages:
    + Replaced man page with upstream maintained version. (Closes: #781345)

 -- Michael Lustfield <michael@lustfield.net>  Tue, 07 Apr 2015 18:57:45 -0500

nginx (1.6.2-5) unstable; urgency=medium

  [ Christos Trochalakis ]
  * debian/conf/nginx.conf:
    + Drop SSLv3 protocol (POODLE), and prefer server ciphers
      by default. (Closes: #767456)
  * debian/copyright:
    + Add copyright for ngx_http_substitutions_filter_module.
  * debian/nginx-common.{preinst,postinst,postrm}:
    + Remove /etc/nginx/naxsi-ui.conf conffile. (Closes: #768233)
  * debian/README.Debian:
    + Add a list of important changes since wheezy.

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Sun, 30 Nov 2014 10:39:55 +0200

nginx (1.6.2-4) unstable; urgency=medium

  [ Christos Trochalakis ]
  * debian/modules/nginx-development-kit:
    + Upgrade v0.2.17-7-g24202b4 -> v0.2.19
  * debian/modules/nginx-echo:
    + Upgrade v0.51 -> v0.56
  * debian/modules/nginx-upload-progress:
    + Upgrade v0.9.0-0-ga788dea -> 0.9.1
  * debian/modules/ngx-fancy-index:
    + Upgrade v0.3.3 -> v0.3.4
  * debian/copyright:
    + Rewrite copyright file fixing various issues.
  * debian/nginx-common.nginx.logrotate:
    + Switch postrotate to the initscript's rotate command.

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Sun, 19 Oct 2014 08:23:33 +0300

nginx (1.6.2-3) unstable; urgency=medium

  [ Christos Trochalakis ]
  * Change the default document root to /var/www/html according to debian
    policy 3.9.6.0. (Closes: #730382)
  * Provide a new, debian specific, default landing page.
  * debian/nginx-common.nginx.service: