@@ -1,32 +1,0 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Welcome to nginx on Debian!</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
-</head>
-<body>
-<h1>Welcome to nginx on Debian!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working on Debian. Further configuration is required.</p>
-
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a></p>
-
-<p>
-      Please use the <tt>reportbug</tt> tool to report bugs in the
-      nginx package with Debian. However, check <a
-      href="http://bugs.debian.org/cgi-bin/pkgreport.cgi?ordering=normal;archive=0;src=nginx;repeatmerged=0">existing
-      bug reports</a> before reporting a new bug.
-</p>
-
-<p><em>Thank you for using debian and nginx.</em></p>
-
-
-</body>
-</html>
