@@ -1,6 +1,6 @@
 debian/conf/* etc/nginx
 debian/ufw/nginx etc/ufw/applications.d
-debian/index.html usr/share/nginx/html/
+html/index.html usr/share/nginx/html/
 debian/vim/nginx.yaml usr/share/vim/registry
 contrib/vim/* usr/share/vim/addons
 debian/ngx-conf/ngx-conf usr/sbin/ngx-conf
